--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.58.0",
+    "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.11",
+    "expo": "54.0.13",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.9",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
