--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/clerk-expo": "^2.14.23",
     "@clerk/types": "^4.81.0",
     "@dev-plugins/react-query": "^0.4.0",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -22,24 +22,24 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
-    "expo": "54.0.13",
+    "expo": "^54.0.21",
     "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.8",
+    "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "jotai": "^2.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "1.18.5",
